--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,7 +40,7 @@
             android:layout_marginLeft="30dp"
             android:layout_marginTop="10dp"
             android:backgroundTint="#303030"
-            android:text="Clicky"
+            android:text="Clicky Clicky"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textColor="#FFFFFF"
             android:textSize="22sp" />
