--- a/app/src/main/res/layout/link_collector_dialog.xml
+++ b/app/src/main/res/layout/link_collector_dialog.xml
@@ -21,7 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:hint="Url"
+        android:hint="URL"
         android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
