--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,6 +56,18 @@
             android:textColor="#FFFFFF"
             android:textSize="22sp" />
 
+        <Button
+            android:id="@+id/locator"
+            android:layout_width="333dp"
+            android:layout_height="77dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="10dp"
+            android:backgroundTint="#303030"
+            android:text="Locator"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:textColor="#FFFFFF"
+            android:textSize="22sp" />
+
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
