--- a/app/src/main/res/layout-land/web_service.xml
+++ b/app/src/main/res/layout-land/web_service.xml
@@ -91,7 +91,7 @@
         android:id="@+id/changeTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="150dp"
+        android:layout_marginStart="50dp"
         android:text="Today's Change"
         app:layout_constraintBottom_toBottomOf="@+id/dataTitle"
         app:layout_constraintStart_toEndOf="@+id/dataTitle" />
@@ -110,7 +110,7 @@
         android:id="@+id/yearToDateTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="150dp"
+        android:layout_marginStart="50dp"
         android:text="Year-to-Date"
         app:layout_constraintBottom_toBottomOf="@+id/changeTitle"
         app:layout_constraintStart_toEndOf="@+id/changeTitle" />
@@ -148,5 +148,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/submit"
         app:layout_constraintVertical_bias="0.0" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/submit"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/yearToDateTitle"
+        app:layout_constraintTop_toBottomOf="@+id/view"
+        tools:srcCompat="@tools:sample/avatars" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
